# rust-yew-realworld-example-app

swapi_core/: Cargo.toml
swapi_core/src/: main.rs
